bug fixed: comment overflow horizontally

--- a/source/css/_partial/comment.styl
+++ b/source/css/_partial/comment.styl
@@ -1,5 +1,6 @@
 #comment
   padding 0 20px 20px
+  overflow-x hidden
   .title
     font-weight normal
     margin-bottom 15px
